Sesion1 memory front page

--- a/sesion1/memoria/main.tex
+++ b/sesion1/memoria/main.tex
@@ -36,27 +36,30 @@
 \setlist{itemsep=0.5ex, topsep=0.5ex}
 
 % Constants
-\newcommand{\titulo}{Sesión 1}
+\newcommand{\titulo}{Informe de Prácticas}
+\newcommand{\sesion}{Sesión 1}
 \newcommand{\asignatura}{Computación de Altas Prestaciones}
-\newcommand{\asignaturaAbbr}{CPP}
+\newcommand{\asignaturaAbbr}{CAP}
 \newcommand{\master}{M\'aster en Ingenier\'ia Inform\'atica}
 \newcommand{\autor}{Rub\'en Mart\'inez Ginzo}
 \newcommand{\autorUO}{Rub\'en Mart\'inez Ginzo, UO282651}
 \newcommand{\email}{UO282651@uniovi.es}
-\newcommand{\fecha}{17 de marzo 2025}
+\newcommand{\fecha}{Abril 2025}
 \newcommand{\imagen}{img/UniOvi_bn.jpg}
 
 \begin{document}
 \begin{titlepage}
     \begin{center}
         {\fontsize{38pt}{42pt}\selectfont \textbf{\titulo}} \\
-        \vspace{1cm}
+        \vspace{0.75cm}
+        {\fontsize{34pt}{40pt}\selectfont \textbf{\sesion}} \\
+        \vspace{0.75cm}
         {\fontsize{22pt}{26pt}\selectfont \textbf{\asignatura}} \\
         \vspace{0.5cm}
         {\fontsize{16pt}{20pt}\selectfont \textbf{\master}} \\
-        \vspace{3cm}
+        \vspace{2.5cm}
         \includegraphics[width=0.5\textwidth]{\imagen}
-        \vspace{4cm}
+        \vspace{3cm}
         
         {\Large \textbf{\textit{Autor:}}} \\
         \vspace{0.4cm}
