--- a/sesion1/memoria/caps/intro.tex
+++ b/sesion1/memoria/caps/intro.tex
@@ -4,3 +4,18 @@
 \fancyfoot[r]{\fecha}
 
 \section{Introducción}
+En esta sesión de prácticas de laboratorio se evalúan distintos esquemas de acceso a memoria en la multiplicación de matrices.
+Concretamente, se estudia el rendimiento de la multiplicación de matrices utilizando tres estrategias diferentes:
+
+\begin{itemize}
+    \item \rowmajor
+    \item \colmajor
+    \item \zorder
+\end{itemize}
+El objetivo principal es determinar cuál de estas estrategias es más eficiente en términos de tiempo de ejecución y uso de memoria.
+
+\subsection{Desarrollo}
+Para llevar a cabo esta práctica, 
+
+
+\subsection{Benchmarking}
