--- a/sesion1/memoria/config.sty
+++ b/sesion1/memoria/config.sty
@@ -1,5 +1,9 @@
 \ProvidesPackage{config}
 
+\newcommand{\rowmajor}{\textit{Row-Major order}}
+\newcommand{\colmajor}{\textit{Col-Major order}}
+\newcommand{\zorder}{\textit{Z-Order}}
+
 % HYPERREF % 
 \AtBeginDocument{\renewcommand{\lstlistingname}{Fragmento}}
 
