sesion 1 memoria estructure

--- a/sesion1/memoria/caps/3.tex
+++ b/sesion1/memoria/caps/3.tex
@@ -3,10 +3,5 @@
 \fancyfoot[l]{\asignaturaAbbr}
 \fancyfoot[r]{\fecha}
 
-\section{\rowmajor}
-\label{sec:1}
-
-
-
-
-
+\section{\zorder}
+\label{sec:3}
