--- a/sesion1/memoria/caps/4.tex
+++ b/sesion1/memoria/caps/4.tex
@@ -3,10 +3,5 @@
 \fancyfoot[l]{\asignaturaAbbr}
 \fancyfoot[r]{\fecha}
 
-\section{\rowmajor}
-\label{sec:1}
-
-
-
-
-
+\section{Comparativa}
+\label{sec:4}
