--- a/sesion1/memoria/caps/intro.tex
+++ b/sesion1/memoria/caps/intro.tex
@@ -17,5 +17,4 @@ El objetivo principal es determinar cuál de estas estrategias es más eficiente
 \subsection{Desarrollo}
 Para llevar a cabo esta práctica, 
 
-
-\subsection{Benchmarking}
+\subsection{\textit{Benchmarking}}
