--- a/sesion1/memoria/config.sty
+++ b/sesion1/memoria/config.sty
@@ -1,7 +1,7 @@
 \ProvidesPackage{config}
 
 \newcommand{\rowmajor}{\textit{Row-Major order}}
-\newcommand{\colmajor}{\textit{Col-Major order}}
+\newcommand{\colmajor}{\textit{Column-Major order}}
 \newcommand{\zorder}{\textit{Z-Order}}
 
 % HYPERREF % 
