--- a/sesion1/memoria/main.tex
+++ b/sesion1/memoria/main.tex
@@ -73,4 +73,7 @@
 \include{caps/index}
 \include{caps/intro}
 \include{caps/1}
+\include{caps/2}
+\include{caps/3}
+\include{caps/4}
 \end{document}
