--- a/sesion2/memoria/config.sty
+++ b/sesion2/memoria/config.sty
@@ -3,6 +3,8 @@
 \newcommand{\rowmajor}{\textit{Row-Major order}}
 \newcommand{\colmajor}{\textit{Column-Major order}}
 \newcommand{\zorder}{\textit{Z-Order}}
+\newcommand{\C}{\textit{C}}
+\newcommand{\python}{\textit{Python}}
 
 % HYPERREF % 
 \AtBeginDocument{\renewcommand{\lstlistingname}{Fragmento}}
