--- a/sesion1/memoria/caps/4.tex
+++ b/sesion1/memoria/caps/4.tex
@@ -3,5 +3,4 @@
 \fancyfoot[l]{\asignaturaAbbr}
 \fancyfoot[r]{\fecha}
 
-\section{Comparativa}
-\label{sec:4}
+\section{Conclusiones y dificultades} \label{sec:4}
