--- a/sesion1/memoria/main.tex
+++ b/sesion1/memoria/main.tex
@@ -3,9 +3,11 @@
 \usepackage{geometry, graphicx}
 \usepackage[hidelinks]{hyperref}
 \usepackage{fancyhdr}
-\usepackage{setspace}
 \usepackage{colortbl}
 \usepackage{caption}
+\usepackage[utf8]{inputenc}
+\usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage{enumitem}
 \usepackage{array}
 \usepackage{tabularx}
@@ -18,7 +20,7 @@
 \usepackage{titlesec}
 \usepackage{listings}
 \usepackage{xcolor}
-\renewcommand{\baselinestretch}{1.4} 
+\renewcommand{\baselinestretch}{1.25} 
 \definecolor{darkred}{RGB}{139,0,0}
 \definecolor{darkgreen}{RGB}{0,100,0}
 \definecolor{darkblue}{RGB}{0,0,139}
@@ -27,7 +29,6 @@
 \usepackage{baskervillef}
 \usepackage[varqu,varl,var0]{inconsolata}
 \usepackage[scale=.90,type1]{cabin}
-\usepackage[baskerville,vvarbb]{newtxmath}
 \usepackage[cal=boondoxo]{mathalfa}
 
 % Page config
