--- a/sesion1/memoria/caps/intro.tex
+++ b/sesion1/memoria/caps/intro.tex
@@ -18,12 +18,12 @@ eficiencia en el uso de memoria.
 \subsection{Desarrollo}
 Para el desarrollo de esta práctica, se han seguido las indicaciones recogidas en el guion de la sesión correspondiente. 
 Se han implementado las tres estrategias de acceso en el código fuente, y se han llevado a cabo diversas pruebas para medir su rendimiento.
-Con el fin de comparar los tiempos de ejecución, se ha desarrollado un programa en lenguaje C con fines de \textit{benchmarking}, 
+Con el fin de comparar los tiempos de ejecución, se ha desarrollado un programa en lenguaje \textit{C} con fines de \textit{benchmarking}, 
 tal y como se detalla en el capítulo siguiente. Todo el código fuente se encuentra disponible públicamente en el siguiente 
 \href{https://github.com/rubennmg/CAP/tree/main/sesion1}{repositorio de GitHub}, así como en el archivo \textit{zip} asociado a esta entrega.
 
 \subsection{\textit{Benchmarking}}
-Además del trabajo realizado durante la sesión de laboratorio, se ha desarrollado un programa en C que automatiza la medición 
+Además del trabajo realizado durante la sesión de laboratorio, se ha desarrollado un programa en \textit{C} que automatiza la medición 
 de los tiempos de ejecución para las distintas estrategias de acceso a memoria. 
 
 Este programa, ubicado en el subdirectorio \textit{benchmark}, permite especificar diferentes tamaños de matriz y un número fijo de iteraciones para cada experimento.
