--- a/sesion2/report/caps/intro.tex
+++ b/sesion2/report/caps/intro.tex
@@ -3,9 +3,9 @@
 \fancyfoot[l]{\asignaturaAbbr}
 \fancyfoot[r]{\fecha}
 
-\section{Introducción}
+\section{Introducción} \label{sec:1}
 En esta sesión de prácticas de laboratorio se evalúa la hibridación de lenguajes para la implementación de la multiplicación de matrices, 
-combinando específicamente \C\ y \python. La experimentación se divide entres fases:
+combinando específicamente \C\ y \python. La experimentación se divide en tres fases:
 \vspace{0.15cm}
 \begin{itemize}
     \item \textit{\textbf{Fase 1}}: Implementación de la multiplicación de matrices en \python\ y toma de tiempos.
